Commit - Finalizando o CRUD Categorias

--- a/src/categorias/visao/list-categoria.html
+++ b/src/categorias/visao/list-categoria.html
@@ -1,5 +1,5 @@
 <div class="row mt-5">
-  <div class="col-12 mt-3">
+  <div class="col-12 mt-5">
     <div class="card shadow mt-5">
       <div class="card-header">
         <div class="card-title row">
@@ -40,14 +40,17 @@
         </button>
       </div>
       <div class="modal-body">
-        <p></p>
+        <p>Content</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">
           <i class="mdi mdi-close-circle"></i> Fechar
         </button>
-        <button type="button" class="btn btn-primary btn-save">
-          <i class="mdi mdi-content-save"></i> Salvar mudanças
+        <button type="button" class="btn btn-success btn-save">
+          <i class="mdi mdi-content-save"></i> Salvar categoria
+        </button>
+        <button type="button" class="btn btn-primary btn-update">
+          <i class="mdi mdi-content-save"></i> Alterar categoria
         </button>
       </div>
     </div>
@@ -57,3 +60,7 @@
 <script src="src/categorias/controle/new-categoria.js"></script>
 <script src="src/categorias/controle/create-categoria.js"></script>
 <script src="src/categorias/controle/list-categoria.js"></script>
+<script src="src/categorias/controle/view-categoria.js"></script>
+<script src="src/categorias/controle/edit-categoria.js"></script>
+<script src="src/categorias/controle/update-categoria.js"></script>
+<script src="src/categorias/controle/delete-categoria.js"></script>
